# cardiology-gen-ai

./: .gitignore  config.json  pyproject.toml
.github/workflows/: docs.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/api/: config_manager.rst  index.rst  models.rst
src/cardiology_gen_ai/: __init__.py  models.py
src/cardiology_gen_ai/config/: manager.py
src/cardiology_gen_ai/utils/: singleton.py
