[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "."

[project]
name = "CardiologyGenAI-Coordo"
version = "0.1.1"
description = "Coordinating module for GenAI application to cardiology protocols"
requires-python = ">=3.11"
authors = [
    { name = "Gaia Saveri", email = "gaia.saveri@gmail.com" }
]

dependencies = [
    "langchain-huggingface==0.3.1",
    "pydantic==2.11.7",
    "transformers==4.56.0",
    "numpy==1.26.4",
    "torch==2.8.0",
    "langchain-qdrant==0.2.0",
    "langchain-community==0.3.25",
    "qdrant-client==1.15.1",
]

[project.optional-dependencies]
documentation = [
    "sphinx==7.3.7",
    "sphinxcontrib-mermaid==1.0.0",
    "autodoc-pydantic==2.2.0",
    "sphinx-toolbox==4.0.0",
    "sphinx-book-theme==1.1.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cardiology_gen_ai*"]