[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.egg_info]
egg_base = "."

[project]
name = "CardiologyGenAI-Coordo"
version = "0.1.1"
description = "Coordinating module for GenAI application to cardiology protocols"
requires-python = ">=3.11"
authors = [
    { name = "Gaia Saveri", email = "gaia.saveri@gmail.com" }
]

dependencies = [
    "langchain-core>=1.0.0",
    "langchain>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-classic>=1.0.0",
    "langchain-ollama>=1.0.0",
    "pydantic==2.11.7",
    "transformers==4.56.0",
    "numpy==1.26.4",
    "torch==2.2.2",
    "langchain-qdrant>=1.0.0",
    "qdrant-client==1.15.1",
]

[project.optional-dependencies]
documentation = [
    "sphinx==7.3.7",
    "sphinxcontrib-mermaid==1.0.0",
    "autodoc-pydantic==2.2.0",
    "sphinx-toolbox==4.0.0",
    "sphinx-book-theme==1.1.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["cardiology_gen_ai*"]